--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ script:
   - lein checks
   - lein test
   - lein doo once
-  - lein cloverage
+
+after_success:
+  - lein cloverage --codecov
+  - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOEN -f target/coverage/codecov.json
 
 notifications:
   Emlyn.Corrin@microsoft.com
