--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
 
       # run tests!
       - run: lein checks
-      - run: lein test
+      - run: lein test2junit
       - run: npm install
       - run: lein doo once
       - run: lein cloverage
