--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/clojure:lein-2.7.1
+      #- image: circleci/clojure:lein-2.7.1
+      - image: lsenta/cljs-testing
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
