--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       #- image: circleci/clojure:lein-2.7.1
-      - image: lsenta/cljs-testing
+      - image: andycjones/clojure-js-build
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
