--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache:
   directories:
   - $HOME/.m2
 
+env:
+  global:
+    - LEIN_USE_BOOTCLASSPATH=no
+
 script:
   - lein checks
   - lein tests
