--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "src": "src",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lumo-cljs": "^1.10.1"
+  },
   "devDependencies": {
     "karma": "^5.0.5",
     "karma-chrome-launcher": "^3.1.0",
