Revert "Install lumo"
This reverts commit 759d11035da869ada35748d486ead45d5f018a84.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "src": "src",
     "test": "test"
   },
-  "dependencies": {
-    "lumo-cljs": "^1.10.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "karma": "^5.0.5",
     "karma-chrome-launcher": "^3.1.0",
