--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma-cljs-test": "^0.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
+    "lumo-cljs": "^1.10.1",
     "slimerjs": "^1.0.0"
   },
   "scripts": {
